src/styles.css
/* ... */
.job-timeline-content {
  background: #2196f3;
  padding: 8px 20px;
  border-radius: 3px;
  position: relative;
}
.job-timeline-content h1 {
  font-size: 20px;
  line-height: 30px;
  font-weight: bold;
  letter-spacing: 0.2px;
  color: #ffffff;
  margin-bottom: 0px;
}
.job-timeline-content p {
  font-size: 14px;
  line-height: 24px;
  font-weight: normal;
  letter-spacing: 0.56px;
  color: #ffffff;
  margin-top: 12px;
  margin-bottom: 0px;
}
.job-timeline ul li:nth-child(odd) .number {
  right: -16px;
}
.job-timeline ul li:nth-child(even) .number {
  left: -16px;
}
.number {
  position: absolute;
  background: #0b1320;
  width: 32px;
  height: 32px;
  border-radius: 60px;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #ffffff;
  border: 2px solid #2196f3;
  font-weight: 500;
  font-size: 14px;
}

/** Key Difference **/
.key-difference-box {
  text-align: center;
  padding: 0px 30px;
  background: #ffffff;
}
.key-difference-box img {
  margin-bottom: 25px;
  width: 70px;
  height: 70px;
  object-fit: contain;
}
.key-difference-box p {
  color: #000000;
  margin: 20px 0 30px 0;
  letter-spacing: 0.56px;
  font: normal 14px/24px Roboto;
}

/** our-values **/
.our-values {
  background: url(assets/img/jobrole.jpg) no-repeat center center / 100%;
  position: relative;
}
.our-values::after {
  position: absolute;
  content: "";
  width: 100%;
  height: 100%;
  top: 0;
  background: #0c1421cc;
}
.our-values .container {
  z-index: 10;
}
.ourvalue-grid {
  text-align: center;
  border: 1px solid #fff;
  padding: 30px 20px;
  transition: all ease-in-out 0.3s;
  background: #fff;
  border-radius: 6px;
  box-shadow: 0 0 20px 0 #3e1c831a;
  width: 100%;
  margin-bottom: 20px;
}
.beteam-dna {
  background: #ffffff;
  /* border-right: 1px solid #dfdfdf; */
  box-shadow: none;
  position: relative;
  border-radius: 0px;
  box-shadow: 0 0 20px 0 #3e1c831a;
}
.team-dna:last-child .beteam-dna {
  border-right: 0px;
}
/* .job-border::after{
    position: absolute;
    content: '';
    background: #cccccc;
    width: 1px;
    height: 100%;
    right: 0;
    top: 0;
  } */

/* .ourvalue-grid img {
    margin-bottom: 15px;
    width: 70px;
    height: 70px;
    object-fit: contain;
  } */
.ovimg-defultSize {
  width: 140px !important;
}
.ourvalue-grid h2 {
  font-size: 18px;
  font-weight: 600;
  text-align: center;
  margin-top: 20px;
  color: #372354;
  margin-bottom: 12px;
  text-transform: capitalize;
}
.ourvalue-grid p {
  color: #000000;
  margin: 20px 0 0px 0;
  letter-spacing: 0.56px;
  font: normal 14px/20px Roboto;
}
.ourvalue-grid p span {
  display: block;
  color: #858ea1;
}

.apptalent-connect {
  background: #494b4e url(assets/img/how/map.JPG) no-repeat center center /
    cover;
  width: 100%;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
}
.apptalent-connect::after {
  position: absolute;
  content: "";
  background: #494b4ee8;
  width: 100%;
  top: 0;
  height: 100%;
  left: 0;
  right: 0;
}
.apptalent-connect .container {
  z-index: 1;
}
.apptalent-connect.grow-erpteam {
  background: url(assets/img/how/map.JPG) no-repeat center center / cover;
  position: relative;
}
.apptalent-connect.grow-erpteam::after {
  position: absolute;
  content: "";
  background: #3f48cce3;
  width: 100%;
  top: 0;
  height: 100%;
  left: 0;
  right: 0;
}
.apptalent-connect.grow-erpteam .container {
  z-index: 1;
}
.apptalent-export-content p {
  color: #ffffff;
  margin: 0px 0 0px 0;
  letter-spacing: 0.56px;
  font: normal 26px/40px Roboto;
  text-align: center;
}
.apptalent-export-content p span {
  display: block;
}
.talktous-content h1 {
  font-size: 2rem;
  text-align: center;
  margin-bottom: 20px;
  line-height: 50px;
}
.talktous-content p {
  font: normal 18px/26px Roboto;
}
/* .apptalent-table-view {
    box-shadow: 0 0 24px rgba(0, 0, 0, 0.15);
  } */
.apptalent-table-view table {
  width: 100%;
  table-layout: fixed;
}
.apptalent-table-view table .price-table-head {
  color: #ffffff;
}
.apptalent-table-view table tr th {
  font: normal 16px/22px Roboto;
  padding: 20px 0px;
  text-align: center;
  background-color: #0b1320;
  border-right: 1px solid #4d4d4d;
}
.apptalent-table-view table tr th.pth-first-th {
  background: transparent;
}
.apptalent-table-view table tr th:nth-child(2) {
  background: #3f48cc;
}
.apptalent-table-view table tr td {
  font: normal 14px/22px Roboto;
  padding: 12px 12px;
  border: 1px solid #e2e2e2;
}
.apptalent-table-view table tr td:not(:nth-child(1)) {
  text-align: center;
}
.apptalent-table-view table tr:nth-child(even):not(.price-table-head) {
  background: #f1f1f1;
}
.apptalent-table-view table tr td:nth-child(2) {
  background: #ffffff;
}
.apptalent-table-view table tr td p {
  margin: 0px;
  display: flex;
  align-items: baseline;
}
.apptalent-table-view table tr td i {
  padding-right: 10px;
  color: #3090db;
}
.combtn {
  border: none;
  background: #ffffff;
  outline: none;
  padding: 4px 12px;
  font: 500 14px/18px Roboto;
  border-radius: 60px;
  min-width: 80px;
  letter-spacing: 0.5px;
}
.green-laybtn {
  background: rgb(72 187 120 / 18%);
  color: #48bb78;
}
.red-laybtn {
  background: rgb(245 101 101 / 18%);
  color: #f56565;
}

.price-week span {
  display: inline-block;
  font-size: 16px;
  font-weight: 500;
  color: #3090db;
}
.price-week span:nth-child(1) {
  font-size: 32px;
}

/** Get Hired **/
.gethire-wraper {
  background-color: #ffffff;
  position: relative;
  z-index: 1;
  display: flex;
  align-items: center;
  padding-top: 50px;
  padding-bottom: 50px;
  overflow: hidden;
}
.gethire-wraper::after {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  opacity: 0.05;
  height: 100%;
  z-index: -1;
  background: url(assets/img/building.jpg) no-repeat;
}
/** Platform **/
.platform-box {
  text-align: center;
  position: relative;
  display: flex;
  flex-direction: column;
}
.platform-box .plat-content.icon-box {
  flex: 1 1 auto;
}
/* ... */

